Fixed the z-index on the backgroundContainer.
The windows are now always on top.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,7 +17,8 @@ code {
 }
 
 .backgroundContainer{
-  top: 0;
+  z-index: 5;
+  top: 20px;
   left: 0;
   width: 100vw;
   height: 100vh;
@@ -35,7 +36,7 @@ code {
   direction: rtl;
   position: fixed;
   font-family: inherit;
-  top: 60px;
+  top: 30px;
   left: 0;
   min-height: 100px;
   max-height: 100%;
